--- a/albumy/templates/base.html
+++ b/albumy/templates/base.html
@@ -1,5 +1,3 @@
-{% from 'bootstrap/nav.html' import render_nav_item %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,8 +28,8 @@
 
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <div class="navbar-nav mr-auto">
-                    {{ render_nav_item('main.index', 'Home') }}
-                    {{ render_nav_item('main.explore', 'Explore') }}
+                    <a class="nav-item nav-link" href="{{ url_for('main.index') }}">Home</a>
+                    <a class="nav-item nav-link" href="{{ url_for('main.explore') }}">Explore</a>
                     <form class="form-inline my-2 my-lg-0" action="{{ url_for('main.search') }}">
                         <input type="text" name="q" class="form-control mr-sm-1" placeholder="Photo, tag or user"
                                required>
