image search also done!

--- a/albumy/templates/main/search.html
+++ b/albumy/templates/main/search.html
@@ -41,7 +41,7 @@
     </div>
     {% if results %}
         <div class="page-footer">
-            {{ render_pagination(pagination, align='right') }}
+            {#{{ render_pagination(pagination, align='right') }}#}
         </div>
     {% endif %}
 {% endblock %}
